Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -41,9 +41,9 @@ Knud Bjerres oversigt over tysk grammatik har i årtier været en redningsplanke
 Rigtigt meget er skrevet om Rust men, ikke overraskende, ganske lidt på dansk.
 Hæftet indeholder oversættelser af programmeringsbegreber som 
  mange sikkert vil finde særprægede, da dansk sjældent anvendes i den sammenhæng.
-Hvordan oversættes f.eks. ord som \emph{trait} og \emph{linter}?
+Hvordan oversættes eksempelvis ord som \emph{trait} og \emph{linter}?
 Jeg syntes det ville være ærgerligt at skrinlægge dansk for emnet, og har forsøgt anvende eksisterende oversættelse af f.eks. C og, når det var hensigtsmæssigt, tillagt nytilkomne ord fra Rust.
-Grænserne for \emph{hensigtsmæssig} er naturligvis vide, så på for\-hånd undskyld.
+Grænserne for \emph{hensigtsmæssig} er naturligvis vide, så på for\-hånd undskyld\footnote{Forslag og rettelser modtages med kyshånd på hæftets hjemmeside: \url{https://github.com/mlund/rust_paa_dansk}.}.
 
 Mål\-gruppen er den lejlig\-heds\-vise Rust-udøver der, ligesom undertegnede, ruster lidt til mellem hver indsats. God fornøjelse!
 
@@ -314,6 +314,7 @@ associated function & tilknyttet funktion \\
 attribute & attribut \\
 cast & omtolke \\
 compiler & kompiler \\
+dispatch & afvikling, afsendelse \\
 enum & optællingstype \\
 enumeration & enumeration \\
 interface & grænseflade \\
